--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -13,8 +13,8 @@
 
 
 	</article>
-		<article id="article" class="mt-5 w-50 ">
-			<h5 class="m-5" style="color:#ff7629">FL STUDIO 21.1 |</h5>
+		<article id="article" class="mb-5 w-75 fs-4 mx-auto position-relative ">
+			<h5 class="m-5 text-end fs-4 fs-4" style="color:#ff7629">FL STUDIO 21.1 |</h5>
 			<p>
 			Nous sommes ravis de la sortie de FL Studio 21.1.
 			</p>
@@ -43,10 +43,10 @@
 			
 			
 																																	             
+			<h5 class="text-center fs-4 mb-5 position-absolute bottom-0 text-danger">Quoi de neuf dans FL STUDIO 21.1</h5>
 		</article>
 
-		<article id="article" class="mt-5 w-100 d-flex flex-column mx-auto ">
-			<h5 class="text-center">Quoi de neuf dans FL STUDIO 21.1</h5>
+		<article id="article" class="mt-5 w-100 d-flex flex-column mx-auto position-relative ">
 			<div class="mt-5 w-100 d-flex justify-content-center ">
 			<div  class="article_acceuil  col-4 m-2  ps-3">
 				<h5 style="color:#ff7629">FL Studio</h5>
@@ -116,8 +116,8 @@
 		</article>
 
 
-		<article id="article2" class=" p-3 mb-5">OOOOOOOOO
-			<div class="fs-4 mb-5">
+		<article id="article2" class=" p-3 mb-5">
+			<div class="fs-4 ">
 			<h3 class="text-info fw-bold">FL STUDIO |</h3> 
 			 <p>Conçu pour</p> 
 			 <div>
@@ -125,33 +125,32 @@
 			   en vous <span class="fs-4 fw-bolder">!</span> 
 			 </div> 
 			 </div>
-			<div class="d-flex justify-content-center align-items-center" >
-					<span class="col-3 me-4 fs-4">Avec plus de 25 ans de développement continu, FL STUDIO est devenu le 
+			<div class="col-12  d-flex justify-content-center align-items-center flex-wrap" >
+					<div class="pourLesMusicien col-4 h-25 ">Avec plus de 25 ans de développement continu, FL STUDIO est devenu le 
 						« moyen le plus rapide de votre cerveau à vos enceintes » pour bon nombre des meilleurs DJ
 						et producteurs du monde. De l'utilisation de l'essai FL Studio dans leur chambre
 						à l'atterrissage sur les plus grandes scènes du monde. Est-ce votre tour ? 
 						Notre version d'essai vous permet de créer et d'enregistrer des projets, 
 						puis de les exporter vers des formats audio comme MP3 et WAV, 
 						à être partagés avec le monde. Jusqu’où FL Studio vous mènera-t-il ?
-					</span>
-					<img class="col-9" src="images\products\flstudio-powerUser-image-cloud.png" alt="">
+					</div>
+			
+					<img class="col-7 m-4" src="images\products\flstudio-powerUser-image-cloud.png" alt="">
 			</div>
 		</article>
 
-	<article id="article " class="col-12  d-flex align-items-center mx-auto flex-wrap " >
-		<img class="w-50 m-2" src="images/products/155226-large.jpg" alt="">
-		<p style="font-size:1.5em" class="w-25 text-start mx-auto ">
+	<article id="article " class="col-12 d-flex justify-content-center align-items-center mx-auto flex-wrap " >
+		<img class="col-7  m-4" src="images/products/155226-large.jpg" alt="">
+		<p style="font-size:1.5em" class="compositeur  col-4 text-start mx-auto ">
 			En tant que compositeur, ma tâche la plus difficile est de traduire les idées de ma tête dans un DAW.
 																																	              Fruty-loops se sent comme une extension de mon cerveau et me permet de créer facilement la musique de mon imagination.
 		</p>
 	</article>
 	<article id="article_love" class="d-flex flex-column justify-content-center align-items-center ">
-		<div class="d-flex w-100 justify-content-around  ">
-		<div class="img_love">
-		love
-		</div>
-		<span class="img_slicex" ></span>
-		<span class="img_flkey"></span>
+		<div class="d-flex w-100 justify-content-around flex-wrap ">
+				<div class="img_love mt-4"></div>
+				<span class="img_slicex mt-4" ></span>
+				<span class="img_flkey mt-4"></span>
 			{# <img  class="img_love" src="images/products/LovePhilter_Splash.jpg" alt="">
 			<img  class="img_slicex" src="images/products/slicex_splash.jpg" alt="">
 			<img  class="img_flkey" src="images/products/FLkey.jpg" alt=""> #}
@@ -163,7 +162,12 @@
 
 
 	<article  class="col-12 mosaique">
-		<h3 style="font-size:2.5em; font-weight:bold" class="mb-5">Le monde de Fruty Loops</h3>
+		<div style="font-size:2.5em; font-weight:bold" class="mb-5">
+			<div class="">
+				<div>Le <br> Monde de</div>
+				<div class="position-relative   start-25 text-end w-50">Fruty Loops</div>   
+			</div>
+		</div>
 
 
 		<div class="d-flex  flex-column w-100">
