--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -360,6 +360,9 @@ span.survol{
     width:300px;
     height: 100%;
 }
+img#logo_acceuil{
+height: 55px;
+}
 
 /* .image>span {
     font-size: 1em;
