--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,8 +1,8 @@
 <nav  class="navbar navbar-expand-lg text-black  >
 	    <div class=" container-fluid  ">
-			<a class="navbar-brand fs-6" href="{{ path('accueil') }}">Mon coin censeur</a>
+			<a class="navbar-brand fs-6" href="{{ path('accueil') }}"><img id="logo_acceuil" class="" src='images/products/fl-studio-logo.webp' ></img> Acceuil </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
+				<span class="navbar-toggler-icon text-white"></span>
 			</button>
 
 			<div class="collapse navbar-collapse" id="navbarColor02">
