--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -15,6 +15,9 @@
 	</article>
 		<article id="article" class="mb-5 w-75 fs-4 mx-auto position-relative ">
 			<h5 class="m-5 text-end fs-4 fs-4" style="color:#ff7629">FL STUDIO 21.1 |</h5>
+			<div class="ecrit text-white" >
+			
+			</div>
 			<p>
 			Nous sommes ravis de la sortie de FL Studio 21.1.
 			</p>
@@ -46,7 +49,7 @@
 			<h5 class="text-center fs-4 mb-5 position-absolute bottom-0 text-danger">Quoi de neuf dans FL STUDIO 21.1</h5>
 		</article>
 
-		<article id="article" class="mt-5 w-100 d-flex flex-column mx-auto position-relative ">
+		<article id="article3" class="mt-5 w-100 d-flex flex-column mx-auto position-relative ">
 			<div class="mt-5 w-100 d-flex justify-content-center ">
 			<div  class="article_acceuil  col-4 m-2  ps-3">
 				<h5 style="color:#ff7629">FL Studio</h5>
@@ -116,16 +119,16 @@
 		</article>
 
 
-		<article id="article2" class=" p-3 mb-5">
-			<div class="fs-4 ">
-			<h3 class="text-info fw-bold">FL STUDIO |</h3> 
-			 <p>Conçu pour</p> 
+		<article id="article2" class="  p-3 mb-5 d_flex flex-column justify-content-arround align-items-center">
+			<div class="fs-4 fw-4 position-relative w-100 start-25 ">
+				<h3 class="text-info fw-bold">FL STUDIO |</h3> 
+				 <p>Conçu pour</p> 
 			 <div>
 			  <span class="text-primary"> le Musicien</span>
-			   en vous <span class="fs-4 fw-bolder">!</span> 
+			   En VOUS <span class="fs-4 fw-bolder">!</span> 
 			 </div> 
 			 </div>
-			<div class="col-12  d-flex justify-content-center align-items-center flex-wrap" >
+			<div class="col-12 h-100 d-flex justify-content-center align-items-center flex-wrap" >
 					<div class="pourLesMusicien col-4 h-25 ">Avec plus de 25 ans de développement continu, FL STUDIO est devenu le 
 						« moyen le plus rapide de votre cerveau à vos enceintes » pour bon nombre des meilleurs DJ
 						et producteurs du monde. De l'utilisation de l'essai FL Studio dans leur chambre
@@ -147,7 +150,7 @@
 		</p>
 	</article>
 	<article id="article_love" class="d-flex flex-column justify-content-center align-items-center ">
-		<div class="d-flex w-100 justify-content-around flex-wrap ">
+		<div class="d-flex w-100 justify-content-around align-items-center flex-wrap h-100 mx-auto   ">
 				<div class="img_love mt-4"></div>
 				<span class="img_slicex mt-4" ></span>
 				<span class="img_flkey mt-4"></span>
@@ -164,8 +167,8 @@
 	<article  class="col-12 mosaique">
 		<div style="font-size:2.5em; font-weight:bold" class="mb-5">
 			<div class="">
-				<div>Le <br> Monde de</div>
-				<div class="position-relative   start-25 text-end w-50">Fruty Loops</div>   
+				<div ><span class="colorOrange">Le</span> <br> <span >Monde de </span></div>
+				<div class="position-relative   start-25 text-end w-50"><span class="colorOrange">Fruty Loops</span><span class="colorOrange  ms-4 ">!</span> </div>   
 			</div>
 		</div>
 
