--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -50,8 +50,8 @@
 		</article>
 
 		<article id="article3" class="mt-5 w-100 d-flex flex-column mx-auto position-relative ">
-			<div class="mt-5 w-100 d-flex justify-content-center ">
-			<div  class="article_acceuil  col-4 m-2  ps-3">
+			<div class="mt-5 w-100 d-flex justify-content-center flex-wrap ">
+			<div  class="piano-roll col-4 m-2  ps-3">
 				<h5 style="color:#ff7629">FL Studio</h5>
 
 				<div>
@@ -77,7 +77,7 @@
 
 			</div>
 
-			<div id="article"class="article_acceuil   col-4 m-2  ps-3">
+			<div id="article"class="piano-roll   col-4 m-2  ps-3">
 				<h5 style="color:#ff7629" class="ml3">Piano roll</h5>
 				<div>
 
@@ -93,7 +93,7 @@
 				</div>
 
 			</div>
-			<div class="article_acceuil  col-3 m-2  ps-3">
+			<div class="piano-roll  col-3 m-2  ps-3">
 
 				<h5 style="color:#ff7629">Piano roll</h5>
 				<div>
