--- a/templates/catalogue/produits.html.twig
+++ b/templates/catalogue/produits.html.twig
@@ -33,7 +33,7 @@
             {% for product in products %}
 
 
-                <div style='box-shadow:1px 1px 13px 0px #ff7629;height:354px ;width:268px; background:#ff7629;' class="card_catalogue col-md-4  m-4 mx-auto p-1 rounded">
+                <div class="card_catalogue col-md-4  m-4 mx-auto p-1 rounded">
                         <div style='height:350px ;width:250px; ' class="card_catalogue col-md-4 bg-white m-4 mx-auto p-1 position-relative rounded-1">
                             <a href="{{ path('product', { 'id' : product.id }) }}">
                                 <img style="position: relative;top:-50px;left:-64.5px; "  class="img-fluid img-thumbnail border-0 h-50 w-50 " alt="oups" src="/images/products/{{ product.image }}">
@@ -52,7 +52,7 @@
             {% endfor %}
         </div>
     </div>
-    <article id="article2" class="col-12 d-flex justify-content-center align-items-center ">
+    <article id="" class="col-12 d-flex justify-content-center align-items-center ">
         <img class="w-100" src="images/products/MartinGarrix_Splash-1600x900.jpg" alt="">
     </article>
 
