--- a/templates/catalogue/produits.html.twig
+++ b/templates/catalogue/produits.html.twig
@@ -52,7 +52,7 @@
             {% endfor %}
         </div>
     </div>
-    <article id="" class="col-12 d-flex justify-content-center align-items-center ">
+    <article id="article" class="col-12 d-flex justify-content-center align-items-center ">
         <img class="w-100" src="images/products/MartinGarrix_Splash-1600x900.jpg" alt="">
     </article>
 
