--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -223,11 +223,18 @@ span.survol{
     height: 100vh;
 
 }
+#article1{
+    display: flex;
+    justify-content: space-around;
+    margin:0 auto;
+    height: 200vh;
+
+}
 #article2{
     display: flex;
     justify-content: space-around;
     margin:0 auto;
-    height: 150vh;
+    height: 300vh;
 
 }
 #article3{
