--- a/templates/catalogue/produits.html.twig
+++ b/templates/catalogue/produits.html.twig
@@ -6,10 +6,10 @@
 <div class="banner text-center">
 	{%include 'carousel.html.twig'%}
 </div>
+<div id="article"  class="col-12 text-center d-flex flex-column justify-content-arround align-items-center ">
         <h6 style="background:#ff7629 " class="rounded border border-dark  p-2 m-2 text-center  text-white fs-4 m-5">
             {% block subtitle %} Produits Images-Line{% endblock %}
         </h6>
-<div id="article" class="col-12 text-center d-flex flex-column justify-content-arround align-items-center ">
     <div class="col-sm-12 mx-auto ">
             <p class="">Trouvez l'edition et tous les plugging qui vous conviennent</p>
             {# <p>Pourquoi FL-STUdio </p> #}
@@ -27,14 +27,14 @@
             </p>
     
     </span>
-        <div class="row mt-5">
+        <div  class="row mt-5 d-flex justify-content-center align-items-center">
 
 
             {% for product in products %}
 
 
                 <div class="card_catalogue col-md-4  m-4 mx-auto p-1 rounded">
-                        <div style='height:350px ;width:250px; ' class="card_catalogue col-md-4 bg-white m-4 mx-auto p-1 position-relative rounded-1">
+                        <div style='height:350px ;width:250px; ' class="col-md-4 bg-white m-4 mx-auto p-1 position-relative rounded-1">
                             <a href="{{ path('product', { 'id' : product.id }) }}">
                                 <img style="position: relative;top:-50px;left:-64.5px; "  class="img-fluid img-thumbnail border-0 h-50 w-50 " alt="oups" src="/images/products/{{ product.image }}">
                             </a>
@@ -52,9 +52,9 @@
             {% endfor %}
         </div>
     </div>
-    <article id="article" class="col-12 d-flex justify-content-center align-items-center ">
-        <img class="w-100" src="images/products/MartinGarrix_Splash-1600x900.jpg" alt="">
-    </article>
 
 </div >
+    <article id="article2" class="col-12 d-flex justify-content-center align-items-center ">
+        <img class="w-75" src="images/products/MartinGarrix_Splash-1600x900.jpg" alt="">
+    </article>
 {% endblock %}
