--- a/templates/accueil/accueil.html.twig
+++ b/templates/accueil/accueil.html.twig
@@ -6,15 +6,15 @@
 {% block body %}
 
 
-	<article id="article" class="d-flex  flex-column justify-content-center align-items-center">
+		<article id="article" class="d-flex  flex-column justify-content-center align-items-center">
 		<img class="m-5 w-75"  src="images/products/FLStudio21.1.jpg" alt="">
 
 
 
 
-	</article>
-		<article id="article" class="mb-5 w-75 fs-4 mx-auto position-relative ">
-			<h5 class="m-5 text-end fs-4 fs-4" style="color:#ff7629">FL STUDIO 21.1 |</h5>
+		</article>
+		<article  class="mb-5 w-75 fs-4 mx-auto  ">
+			<h5 class="m-5 text-end fs-4 fs-4 colorOrange" >FL STUDIO 21.1 |</h5>
 			<div class="ecrit text-white" >
 			
 			</div>
@@ -39,117 +39,125 @@
 			<p>
 			 Tout cela parce que nous vous aimons Lifetime Free Updates!
 			</p>
+			
 	
+		     
 		
              
-		     
-			
 			
 																																	             
-			<h5 class="text-center fs-4 mb-5 position-absolute bottom-0 text-danger">Quoi de neuf dans FL STUDIO 21.1</h5>
 		</article>
 
 		<article id="article3" class="mt-5 w-100 d-flex flex-column mx-auto position-relative ">
 			<div class="mt-5 w-100 d-flex justify-content-center flex-wrap ">
-			<div  class="piano-roll col-4 m-2  ps-3">
-				<h5 style="color:#ff7629">FL Studio</h5>
+					<div class="EM6 w-100  h-50">
+						<div data-em="EM6" class="fs-1 fw-1 text-white">Quoi de Neuf</div>
+						<div data-em="EM6" class="fs-3">
+						<span>dans</span> <span class="fs-1 text-info" >FL</span> <span class="fs-1 text-warning">STUDIO</span> <span class="text-info">21.1</span>   
+						</div>
+					</div>
+					<div  class="piano-roll col-4 m-2  ps-3">
+						<h5 class="text-warning">FL Studio</h5>
 
-				<div>
+						<div>
 
-					<h6 class="ml3">Formes d’onde colorées -</h6>
-					<p class="ml3">Option de paramètres généraux pour colorer le contenu de fréquence de code dans les formes d’onde audio. Cela s’applique au navigateur, à la liste de lecture, au canal de l’échantillonneur, etc.</p>
-				</div>
-
-
-				<div>
-					<h6 class="ml3">Contrôle MIDI -
-					</h6>
-					<p class="ml3">Nouveau mode de synchronisation externe et stabilité de l’horloge maître MIDI améliorée. Cela permet à FL Studio de 'asservir' une horloge MIDI externe afin qu’elle joue à temps sur une source d’horloge MIDI externe..</p>
-
-				</div>
+							<h6 class="ml3">Formes d’onde colorées -</h6>
+							<p class="ml3">Option de paramètres généraux pour colorer le contenu de fréquence de code dans les formes d’onde audio. Cela s’applique au navigateur, à la liste de lecture, au canal de l’échantillonneur, etc.</p>
+						</div>
 
 
-				<div>
-					<h6 class="ml3">Mises à jour automatisées -</h6>
-					<p class="ml3">Option pour télécharger automatiquement les mises à jour de FL Studio et les appliquer au prochain redémarrage.</p>
+						<div>
+							<h6 class="ml3">Contrôle MIDI -
+							</h6>
+							<p class="ml3">Nouveau mode de synchronisation externe et stabilité de l’horloge maître MIDI améliorée. Cela permet à FL Studio de 'asservir' une horloge MIDI externe afin qu’elle joue à temps sur une source d’horloge MIDI externe..</p>
 
-				</div>
+						</div>
 
-			</div>
 
-			<div id="article"class="piano-roll   col-4 m-2  ps-3">
-				<h5 style="color:#ff7629" class="ml3">Piano roll</h5>
-				<div>
+						<div>
+							<h6 class="ml3">Mises à jour automatisées -</h6>
+							<p class="ml3">Option pour télécharger automatiquement les mises à jour de FL Studio et les appliquer au prochain redémarrage.</p>
 
-					<h6 class="ml3">Aligner sur l’échelle -</h6>
-					<p class="ml3">Option de clavier pour aligner les notes sur l’échelle sélectionnée lors du placement ou du mouvement. Voir l’icône de note dans la barre d’outils.</p>
+						</div>
 
-				</div>
-				<div>
-					<h6 class="ml3">Menu > Outils > Script -</h6>
-					<p class="ml3">
-						Les scripts sont basés sur Python qui permet une manipulation personnalisée des données du clavier. Il existe plusieurs scripts prédéfinis ou vous pouvez écrire les vôtres. Le script inclut également la création automatique d’interface utilisateur. Voir le forum de script de piano roll pour partager et discuter des scripts.</p>
+					</div>
 
-				</div>
+					<div class="piano-roll   col-4 m-2  ps-3 mb-1">
+						<h5 class="text-warning" class="ml3">Piano roll</h5>
+						<div>
 
-			</div>
-			<div class="piano-roll  col-3 m-2  ps-3">
+							<h6 class="ml3">Aligner sur l’échelle -</h6>
+							<p class="ml3">Option de clavier pour aligner les notes sur l’échelle sélectionnée lors du placement ou du mouvement. Voir l’icône de note dans la barre d’outils.</p>
 
-				<h5 style="color:#ff7629">Piano roll</h5>
-				<div>
-					<p class="ml3">
-						Nouveaux Pluging et mis à jour</p>
-					<h6 class="ml3">Hyper Chorus -</h6>
-					<p>Extreme chorus FX plugin, inclus avec Producer Edition et plus.</p>
+						</div>
+						<div>
+							<h6 class="ml3">Menu > Outils > Script -</h6>
+							<p class="ml3">
+								Les scripts sont basés sur Python qui permet une manipulation personnalisée des données du clavier. Il existe plusieurs scripts prédéfinis ou vous pouvez écrire les vôtres. Le script inclut également la création automatique d’interface utilisateur. Voir le forum de script de piano roll pour partager et discuter des scripts.</p>
 
-				</div>
-				<div>
+						</div>
 
-					<h6 class="ml3">Edison Declipper -</h6>
-					<p class="ml3">Nouvel outil de décélération amélioré basé sur l’IA. Peut restaurer les enregistrements qui ont été coupés en raison de problèmes de niveau.</p>
+					</div>
+					<div class="piano-roll  col-4 m-2  ps-3">
 
-				</div>
-				<div>
+						<h5 class="text-warning">Piano roll</h5>
+						<div>
+							<p class="ml3">
+								Nouveaux Pluging et mis à jour</p>
+							<h6 class="ml3">Hyper Chorus -</h6>
+							<p>Extreme chorus FX plugin, inclus avec Producer Edition et plus.</p>
 
-					<h6 class="ml3">SliceX -</h6>
-					<p class="ml3">Maintenant redimensionnable en faisant glisser le coin inférieur droit.</p>
-				</div>
-			</div>
+						</div>
+						<div>
+
+							<h6 class="ml3">Edison Declipper -</h6>
+							<p class="ml3">Nouvel outil de décélération amélioré basé sur l’IA. Peut restaurer les enregistrements qui ont été coupés en raison de problèmes de niveau.</p>
+
+						</div>
+						<div>
+
+							<h6 class="ml3">SliceX -</h6>
+							<p class="ml3">Maintenant redimensionnable en faisant glisser le coin inférieur droit.</p>
+						</div>
+					</div>
 			</div>
 		</article>
 
 
 		<article id="article2" class="  p-3 mb-5 d_flex flex-column justify-content-arround align-items-center">
-			<div class="fs-4 fw-4 position-relative w-100 start-25 ">
-				<h3 class="text-info fw-bold">FL STUDIO |</h3> 
-				 <p>Conçu pour</p> 
-			 <div>
-			  <span class="text-primary"> le Musicien</span>
-			   En VOUS <span class="fs-4 fw-bolder">!</span> 
-			 </div> 
-			 </div>
 			<div class="col-12 h-100 d-flex justify-content-center align-items-center flex-wrap" >
-					<div class="pourLesMusicien col-4 h-25 ">Avec plus de 25 ans de développement continu, FL STUDIO est devenu le 
-						« moyen le plus rapide de votre cerveau à vos enceintes » pour bon nombre des meilleurs DJ
-						et producteurs du monde. De l'utilisation de l'essai FL Studio dans leur chambre
-						à l'atterrissage sur les plus grandes scènes du monde. Est-ce votre tour ? 
-						Notre version d'essai vous permet de créer et d'enregistrer des projets, 
-						puis de les exporter vers des formats audio comme MP3 et WAV, 
-						à être partagés avec le monde. Jusqu’où FL Studio vous mènera-t-il ?
+					<div class="pourLesMusicien col-4 h-25 ">
+							<div class="fs-4 fw-4 w-100">
+											<h3 class="text-info fw-bold">FL STUDIO |</h3> 
+											<p>Conçu pour</p> 
+											<div>
+													<span class="text-primary"> le Musicien</span>
+											En VOUS <span class="fs-4 fw-bolder">!</span> 
+											</div> 
+							</div>
+							<div>
+									Avec plus de 25 ans de développement continu, FL STUDIO est devenu le 
+									« moyen le plus rapide de votre cerveau à vos enceintes » pour bon nombre des meilleurs DJ
+									et producteurs du monde. De l'utilisation de l'essai FL Studio dans leur chambre
+									à l'atterrissage sur les plus grandes scènes du monde. Est-ce votre tour ? 
+									Notre version d'essai vous permet de créer et d'enregistrer des projets, 
+									puis de les exporter vers des formats audio comme MP3 et WAV, 
+									à être partagés avec le monde. Jusqu’où FL Studio vous mènera-t-il ?
+							</div>
 					</div>
 			
 					<img class="col-7 m-4" src="images\products\flstudio-powerUser-image-cloud.png" alt="">
 			</div>
 		</article>
 
-	<article id="article " class="col-12 d-flex justify-content-center align-items-center mx-auto flex-wrap " >
+		<article id="article " class="col-12 d-flex justify-content-center align-items-center mx-auto flex-wrap " >
 		<img class="col-7  m-4" src="images/products/155226-large.jpg" alt="">
 		<p style="font-size:1.5em" class="compositeur  col-4 text-start mx-auto ">
 			En tant que compositeur, ma tâche la plus difficile est de traduire les idées de ma tête dans un DAW.
 																																	              Fruty-loops se sent comme une extension de mon cerveau et me permet de créer facilement la musique de mon imagination.
 		</p>
-	</article>
-	<article id="article_love" class="d-flex flex-column justify-content-center align-items-center ">
+		</article>
+		<article id="article_love" class="d-flex flex-column justify-content-center align-items-center ">
 		<div class="d-flex w-100 justify-content-around align-items-center flex-wrap h-100 mx-auto   ">
 				<div class="img_love mt-4"></div>
 				<span class="img_slicex mt-4" ></span>
@@ -161,10 +169,10 @@
 		</div>
 		<p class="mt-5 w-50"></p>
 
-	</article>
+		</article>
 
 
-	<article  class="col-12 mosaique">
+		<article  class="col-12 mosaique">
 		<div style="font-size:2.5em; font-weight:bold" class="mb-5">
 			<div class="">
 				<div ><span class="colorOrange">Le</span> <br> <span >Monde de </span></div>
@@ -244,5 +252,5 @@
 		</div> #}
 
 
-	</article>
+		</article>
 {% endblock %}
