--- a/templates/catalogue/produits.html.twig
+++ b/templates/catalogue/produits.html.twig
@@ -6,11 +6,11 @@
 <div class="banner text-center">
 	{%include 'carousel.html.twig'%}
 </div>
-<div id="article"  class="col-12 text-center d-flex flex-column justify-content-arround align-items-center ">
-        <h6 style="background:#ff7629 " class="rounded border border-dark  p-2 m-2 text-center  text-white fs-4 m-5">
+<div id="article2"  class="col-12 text-center d-flex flex-column justify-content-arround align-items-center ">
+    <div class="col-sm-12 mx-auto ">
+        <h6 style="background:#ff7629 " class="EM6 rounded border border-dark  p-2 m-2 text-center  text-white fs-4 m-5">
             {% block subtitle %} Produits Images-Line{% endblock %}
         </h6>
-    <div class="col-sm-12 mx-auto ">
             <p class="">Trouvez l'edition et tous les plugging qui vous conviennent</p>
             {# <p>Pourquoi FL-STUdio </p> #}
     <span id="detail" class=" d-flex justify-content-center align-items-center ">
