--- a/templates/carousel.html.twig
+++ b/templates/carousel.html.twig
@@ -6,15 +6,15 @@
 	</div>
 	<div class="carousel-inner h-100">
 		<div class="carousel-item active">
-			<img src='images/products/FLStudio21_16x9.jpg' class="d-block mx-auto w-100   " alt="...">
+			<img src='images/products/FLStudio21_16x9.jpg' class="d-block mx-auto h-100   " alt="...">
 		</div>
 		<div class="carousel-item">
-			<img src='images/products/cubase.png' class="d-block mx-auto w-100   " alt="...">
+			<img src='images/products/cubase.png' class="d-block mx-auto    " alt="...">
 
 
 		</div>
 		<div class="carousel-item">
-			<img src='images/products/cubase.png' class="d-block mx-auto w-100   " alt="...">
+			<img src='images/products/cubase.png' class="d-block mx-auto    " alt="...">
 
 		</div>
 	</div>
