--- a/templates/catalogue/detailsProduct.html.twig
+++ b/templates/catalogue/detailsProduct.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Catalogue{% endblock %}
 
 {% block body %}
-<article id="article1" class="col-12 text-center">
-    <div >
+<div class="row text-center">
+    <div style=" position:absolute; top:55% ;left:50%;transform:translate(-50%,-50%)">
         <div class="mt-5 d-flex flex-column justify-content-center align-items-center position-relative">        
             <div style="height:700px; width:400px;" class="col-md-4 text-black bg-white position-relative">
 
@@ -36,5 +36,5 @@
             </div>
         </div>
     </div>
-</article>
+</div>
 {% endblock %}
